--- a/src/FormationBundle/Resources/views/Default/index.html.twig
+++ b/src/FormationBundle/Resources/views/Default/index.html.twig
@@ -87,15 +87,10 @@
             <div class="col m8">
                 <div class="row">
                     <div class="input-field col s6">
-                        {{ form_widget(form.commentaire) }}
-                        {{ form_label(form.commentaire) }}
-                        {{ form_errors(form.commentaire) }}
-                    </div>
-                </div>
-                <input type="submit" value="Create" />
-            </div>
-        </div>
-    </div>
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    <input type="submit" value="Create" />
+    {{ form_end(form) }}
     {% endif %}
     <div style="margin-top: 50px"></div>
     <div class="button-centre">
