--- a/src/FormationBundle/Resources/views/Default/index.html.twig
+++ b/src/FormationBundle/Resources/views/Default/index.html.twig
@@ -75,17 +75,18 @@
             </tbody>
         </table>
     </div>
-    {% if is_granted("ROLE_USER") %}
+    {#{% if is_granted("ROLE_USER") %}#}
     <h1>Commentaire creation</h1>
-        <div class="row">
-            <div class="col m8">
-                <div class="row">
-                    <div class="input-field col s6">
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <input type="submit" value="Create" />
-    {{ form_end(form) }}
+    {% if commentaires is empty %}
+        <textarea name="commentaire[]"></textarea>
+        <textarea name="commentaire[]"></textarea>
     {% endif %}
+    {% if commentaires %}
+        {% for commentaire in commentaires %}
+            <textarea name="commentaire[]">{{ commentaire.message }}</textarea>
+        {% endfor %}
+    {% endif %}
+    {#{% endif %}#}
     <div style="margin-top: 50px"></div>
     <div class="button-centre">
         <input class="btn btn-default edit_admin" type="submit" value="Valider" />
