--- a/src/FormationBundle/Resources/views/promotion/edit.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/edit.html.twig
@@ -51,6 +51,12 @@
                         {{ form_errors(edit_form.dateFin) }}
                     </div>
                 </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        {{ form_widget(edit_form.eleve) }}
+                        {{ form_label(edit_form.eleve) }}
+                        {{ form_errors(edit_form.eleve) }}
+                    </div>
                 <div class="container">
                     <div class="row">
                         <div class="checkbox">
