--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,12 +17,14 @@
     <ul id="dropdown1" class="dropdown-content">
         <li><a href="{{ path('archive_prom') }}">Promotions</a></li>
         <li class="divider"></li>
-        <li><a href="{{ path('archive_index') }}">Eleves</a></li>
+        <li><a href="{{ path('archive_eleve') }}">Eleves</a></li>
     </ul>
     <nav>
         <div class="nav-wrapper">
             <img style="height: 100%" src="{{ asset('bundles/formation/image/logo.png') }}" />
             <ul id="nav-mobile" class="right hide-on-med-and-down ilike-blue-container">
+                <li>(paramètres)</li>
+                {#Voir eleve:show pour voir le tableau à mettre en paramètres#}
                 <li><a href="{{ path('promotion_index') }}">Promotions</a></li>
                 <li><a href="{{ path('eleve_index') }}">Eleves</a></li>
                 {% if is_granted("ROLE_USER") %}
@@ -30,6 +32,11 @@
                 <li><a href="{{ path('langage_index') }}">Langages</a></li>
                 {% endif %}
                 <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Archives</a></li>
+                {% if is_granted("ROLE_USER") %}
+                <li><a href="{{ path('fos_user_security_logout') }}">Déconnection</a> </li>
+                {% else %}
+                <li><a href="{{ path('fos_user_security_login') }}">Connexion</a> </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
